--- a/VirtualPet/PetForm.resx
+++ b/VirtualPet/PetForm.resx
@@ -117,6 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="panel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAAIGNIUk0AAHolAACAgwAA+f8AAIDpAAB1
+        MAAA6mAAADqYAAAXb5JfxUYAAAAJcEhZcwAACxMAAAsTAQCanBgAAACkSURBVFhH7Y5BCsQwDAPzju0n
+        9/+XrANOq9C0bCwfcpBgcByMmGKpm1Pq8a1bIkEWCbJIkEWCLBJkGQR9CfNQHgY6ruVjM0LvQDL62jQk
+        uAw6GRJcBp2MYQmDcll9/r6WWfzoZJb2j3JZfX4jwSHY9XbTO4x3wX/SO5CMvjYNCS4HnQwJLgedjGEJ
+        g3JZff6+l++CBFkkyCJBFgmySJDlFNyXUn9xPQGekmU7LgAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="animTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
